--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,17 @@ dependencies {
     implementation libs.material
     implementation libs.androidx.activity
     implementation libs.androidx.constraintlayout
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0"
+
+
+    //Lottie
+    implementation "com.airbnb.android:lottie:6.0.0"
+
+    //Room
+    def room_version = "2.6.1"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
